ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: public-issuer
    kubernetes.io/ingress.class: haproxy
    kubernetes.io/tls-acme: 'true'
    route.openshift.io/termination: reencrypt
    cert-utils-operator.redhat-cop.io/destinationCA-from-secret: private-vault-tls
    cert-utils-operator.redhat-cop.io/certs-from-secret: public-vault-tls
  labels:
    app: vault
    use-dns01-solver: "true"
spec:
  rules:
  - host: vault.apps.openshift-cluster-name.base-domain.tld
    http:
      paths:
      - backend:
          serviceName: vault-active
          servicePort: https
        path: /
  tls:
  - hosts: 
    - vault.apps.openshift-cluster-name.base-domain.tld
    secretName: public-vault-tls
